--- a/VK_Website/mywebsite/templates/navbar.html
+++ b/VK_Website/mywebsite/templates/navbar.html
@@ -1,5 +1,16 @@
-<a href="/">
-    <h1>LOGO</h1>
+<button>Button1</button>
+<p>This is a Paragraph of texts</p>
+<a>This is an anchor element</a>
+<a href="https://google.com/" target="_blank"> 
+  Link to Google
 </a>
-
+<hr>
+<a href="/"> 
+  <h1>Home Page</h1>
+</a>
+<a href="/enter" target="_blank">Enter New Website</a>
+{% comment %} href is an attribute name. target will open the link in the current tab and _blank will help opening the link in a new tab {% endcomment %}
+<a href="/">
+  <h1>LOGO</h1>
+</a>
 <hr>
